--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
-    app:startDestination="@id/recipiesList">
+    app:startDestination="@id/recipesList">
 
     <fragment
         android:id="@+id/userProfile"
@@ -11,31 +11,13 @@
         android:label="fragment_user_profile"
         tools:layout="@layout/fragment_user_profile" >
         <action
-            android:id="@+id/action_userProfile_to_recipiesList"
-            app:destination="@id/recipiesList"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
-        <action
             android:id="@+id/action_userProfile_to_addRecipe"
             app:destination="@id/addRecipe"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
-    </fragment>
-    <fragment
-        android:id="@+id/recipiesList"
-        android:name="com.example.pshepishnickproject.recipiesList"
-        android:label="fragment_recipies_list"
-        tools:layout="@layout/fragment_recipies_list" >
         <action
-            android:id="@+id/action_recipiesList_to_userProfile"
-            app:destination="@id/userProfile"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
-        <action
-            android:id="@+id/action_recipiesList_to_addRecipe"
-            app:destination="@id/addRecipe"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
+            android:id="@+id/action_userProfile_to_recipesList"
+            app:destination="@id/recipesList" />
     </fragment>
     <fragment
         android:id="@+id/addRecipe"
@@ -48,9 +30,19 @@
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim" />
         <action
-            android:id="@+id/action_addRecipe_to_recipiesList2"
-            app:destination="@id/recipiesList"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
+            android:id="@+id/action_addRecipe_to_recipesList"
+            app:destination="@id/recipesList" />
+    </fragment>
+    <fragment
+        android:id="@+id/recipesList"
+        android:name="com.example.pshepishnickproject.recipesList"
+        android:label="fragment_recipies_list"
+        tools:layout="@layout/fragment_recipies_list" >
+        <action
+            android:id="@+id/action_recipesList_to_addRecipe"
+            app:destination="@id/addRecipe" />
+        <action
+            android:id="@+id/action_recipesList_to_userProfile"
+            app:destination="@id/userProfile" />
     </fragment>
 </navigation>
