--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/recipiesList"
+        android:id="@+id/recipesList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Recipes"
