--- a/app/src/main/res/layout/fragment_recipes_list.xml
+++ b/app/src/main/res/layout/fragment_recipes_list.xml
@@ -3,7 +3,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="15sp"
+    android:background="#F4F5F0">
 
     <SearchView
         android:id="@+id/searchView"
@@ -12,7 +14,8 @@
         android:iconifiedByDefault="false"
         android:queryHint="Search for recipes"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/rounded_border"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
