--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -29,4 +29,11 @@
         android:layout_below="@id/emailTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recipesRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/logoutButton"
+        android:layout_marginTop="16dp"/>
 </RelativeLayout>
