--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:background="@drawable/rounded_border"/>
+            android:background="@drawable/rounded_border"
+            android:contentDescription="Input for email."/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -56,7 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
             android:inputType="textPassword"
-            android:background="@drawable/rounded_border"/>
+            android:background="@drawable/rounded_border"
+            android:contentDescription="Input for password."/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <ProgressBar
@@ -68,13 +70,14 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_login"
-        android:text="ZALOGUJ SIĘ"
+        android:text="Log in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:backgroundTint="@color/red"
         app:cornerRadius="20dp"
         android:layout_marginTop="15sp"
+        android:contentDescription="Button for logging"
         />
 
     <TextView
@@ -83,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"
-        android:text="Nie posiadasz jeszcze konta? Zarejestruj się!"
+        android:text="You don't have an account? Register!"
         android:textSize="13sp" />
 
 </LinearLayout>
