--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -28,7 +28,8 @@
         android:text="Logout"
         android:layout_below="@id/emailTextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:contentDescription="Button to logout."/>
 
     <TextView
         android:id="@+id/textView"
