Poprawki do layout i nawigacji

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -80,14 +80,14 @@
         android:layout_marginTop="15sp"
         android:contentDescription="Button to register."
         />
-    
+
     <TextView
-        android:textSize="13sp"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
         android:id="@+id/loginNow"
         android:text="Already have an account? Log in!"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:gravity="center"
+        android:textSize="13sp" />
 
 </LinearLayout>
